--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+        
         width:auto;
         height:1000px;
         margin:0px;
@@ -26,7 +27,7 @@ body {
 .nav    {
         text-align:right;
         margin-top:-65px;
-        margin-right:340px;
+        margin-right:320px;
         }
    
 
@@ -39,7 +40,7 @@ body {
 .aboutMe {
     color:#4aaaa5;
     font-size:32px;
-    margin-left:30px;
+    margin-left:0px;
     margin-top:20px;}
 
 .footer {
@@ -50,6 +51,7 @@ body {
         height:60px;
         background-color:#666666;
         text-align:center;
+        line-height: 90px;
         border-top:6px solid #4aaaa5;}
 
 h1,h2 {
@@ -64,12 +66,15 @@ p {
         padding:10px 20px 10px 0px;
 }
 
-.about {
+.about, .portfolio, .contact {
+        text-decoration: none;
+        color:#777777;
         padding-right:25px;}
 
-.portfolio {
-        padding-right:25px;
-}
+
+
+
+
 
 
 
